--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-light">
-  <!-- View on Github Button 
+  <!-- View on Github Button
     Copyright (c) 2016 Tim Holman - http://tholman.com
     The MIT License - https://github.com/tholman/github-corners/blob/master/license.md
   -->
@@ -24,7 +24,7 @@
     </svg>
   </a>
   <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-  
+
   <!-- Main Content -->
   <div class="py-5 bg-dark">
     <div class="text-center text-light col-sm-12">
@@ -92,8 +92,8 @@
 
     <div class="row text-center">
       <div class="col-sm">
-        <button type="button" class="btn btn-primary" id="button-led-pls">LED +</button>
-        <button type="button" class="btn btn-primary" id="button-led-mns">LED -</button>
+        <button type="button" class="btn btn-primary" id="button-led-pls">LED Speed -</button>
+        <button type="button" class="btn btn-primary" id="button-led-mns">LED Speed +</button>
       </div>
     </div>
 
@@ -107,7 +107,7 @@
 
   <div class="py-5 bg-dark">
     <div class="text-center text-light col-sm-12">
-      <p>&copy; 2019 Trillion-Node Engine Project</p>
+      <p>&copy; 2020 Trillion-Node Engine Project</p>
       <p>Version 1.0.0</p>
     </div>
   </div>
